--- a/theGame.cbp
+++ b/theGame.cbp
@@ -22,6 +22,7 @@
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
+			<Add option="-std=c99" />
 		</Compiler>
 		<Unit filename="functions.c">
 			<Option compilerVar="CC" />
