--- a/theGame.cbp
+++ b/theGame.cbp
@@ -26,6 +26,7 @@
 		</Compiler>
 		<Linker>
 			<Add option="-std=c99 -lSDL2 -lSDL2_image -lSDL2_ttf" />
+			<Add option="-lSDL2_mixer" />
 		</Linker>
 		<Unit filename="functions.c">
 			<Option compilerVar="CC" />
